simplified inference notebook; included inference in readme

--- a/inference.ipynb
+++ b/inference.ipynb
@@ -80,14 +80,20 @@
     "# delta\n",
     "delta=0.3\n",
     "\n",
-    "\n",
     "x,y=RF.sed_calculator('adaf',real_mass=mass,delta=delta,mdot=mdot,s=s,\n",
     "                       plot=True) "
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Computing a jet spectrum"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +118,6 @@
     "# black hole mass in solar masses\n",
     "mass=1e8\n",
     "\n",
-    "#### Jet \n",
     "# log10 of jet Mdot\n",
     "mdotj=-4\n",
     "# p\n",
@@ -122,17 +127,8 @@
     "# epsilon_B\n",
     "epsb=-1.\n",
     "\n",
-    "#### RIAF\n",
-    "# mdot\n",
-    "mdot=-3.\n",
-    "# s\n",
-    "s=0.3\n",
-    "# delta\n",
-    "delta=0.3\n",
-    "\n",
-    "\n",
-    "x,y=RF.sed_calculator('jet',real_mass=mass,delta=delta,mdot=mdot,s=s,\n",
-    "                       mdotj=mdotj,p=p,epse=epse,epsb=epsb,plot=True)"
+    "x,y=RF.sed_calculator('jet',real_mass=mass, mdotj=mdotj,p=p,epse=epse,\n",
+    "                      epsb=epsb,plot=True)"
    ]
   },
   {
@@ -140,49 +136,6 @@
    "metadata": {},
    "source": [
     "## Sandbox"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from importlib import reload"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/nemmen/Library/CloudStorage/Dropbox/science/projects/adafjet/AGNNES/AGNNES_functions.py:394: SyntaxWarning: invalid escape sequence '\\m'\n",
-      "  ax2.set_xticklabels(['1m','10cm','1cm','1mm','100$\\mu$m','10$\\mu$m','1$\\mu$m','1000$\\AA$','.1keV','1keV','10keV','100keV'],size=12)\n",
-      "/Users/nemmen/Library/CloudStorage/Dropbox/science/projects/adafjet/AGNNES/AGNNES_functions.py:394: SyntaxWarning: invalid escape sequence '\\m'\n",
-      "  ax2.set_xticklabels(['1m','10cm','1cm','1mm','100$\\mu$m','10$\\mu$m','1$\\mu$m','1000$\\AA$','.1keV','1keV','10keV','100keV'],size=12)\n",
-      "/Users/nemmen/Library/CloudStorage/Dropbox/science/projects/adafjet/AGNNES/AGNNES_functions.py:394: SyntaxWarning: invalid escape sequence '\\m'\n",
-      "  ax2.set_xticklabels(['1m','10cm','1cm','1mm','100$\\mu$m','10$\\mu$m','1$\\mu$m','1000$\\AA$','.1keV','1keV','10keV','100keV'],size=12)\n",
-      "/Users/nemmen/Library/CloudStorage/Dropbox/science/projects/adafjet/AGNNES/AGNNES_functions.py:394: SyntaxWarning: invalid escape sequence '\\A'\n",
-      "  ax2.set_xticklabels(['1m','10cm','1cm','1mm','100$\\mu$m','10$\\mu$m','1$\\mu$m','1000$\\AA$','.1keV','1keV','10keV','100keV'],size=12)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<module 'AGNNES_functions' from '/Users/nemmen/Library/CloudStorage/Dropbox/science/projects/adafjet/AGNNES/AGNNES_functions.py'>"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "reload(RF)"
    ]
   },
   {
